--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>Jane Doe | Web Developer</title>
+    <title>Michelle Sandford | Community Engagement PMM for Emerging Developers</title>
   </head>
 
   <body>
     <!-- Navbar -->
     <nav>
-      <h1>JANE DOE</h1>
+      <h1>MICHELLE SANDFORD</h1>
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -58,10 +58,12 @@
       <div class="bio animate__animated animate__shakeX">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
-          dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-          inventore tempore minus nemo, iste ullam illo laboriosam maiores
-          repudiandae quos!
+        Tedx Speaker, Australian Computer Society WA Chairman, Microsoftie and one of MCV's 30 Most 
+        Influential Women in Games. I live at the heart of the developer community and help drive 
+        awareness and engagement as an AI influencer and chatbot builder. I advocate for STEM, the 
+        Games Industry and Developers. I present at around 50 Conferences and Events around the world 
+        on Technology, Learning to Code, Open Source and Building Bots. I judge hackathons and 
+        encourage the next generation into technology careers.
         </p>
       </div>
     </section>
@@ -70,19 +72,22 @@
     <section class="more-about">
       <h2>More About Me</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+        LinkedIn Developer Influencer - Social Selling Index #1 of 42,253, Top 1% in Industry and 
+        Network. Was the #1 Social Seller for Microsoft in 2017-18 and now contribute as one of the 
+        Microsoft Elevate program curators broadcasting content that drives engagement and impact at 
+        scale.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-        nostrum dolor minus, libero delectus praesentium perferendis
+        Developer Community Mentor - I mentor for Microsoft, ACS, SheCodes, Muses Code JS, Girls 
+        Programming Network, Nuevo Foundation, and ABCN - upskilling the next generation of data 
+        scientists and AI engineers, thus building a self-sustaining ecosystem of future talent.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-        consequuntur labore? Ea totam voluptas amet!
+        Non-Executive Director (GAICD) and Advisory Board Member for many Industry, University, 
+        Public-Sector organisations, including the Australian Computer Society, FutureNow and 
+        AIG (which is building the Data Science Curriculum for Diploma and Advanced Diploma Level).
       </p>
+
     </section>
 
     <!-- Skills section -->
