hero image updates

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
   <body>
     <!-- Navbar -->
+    <body class="light-theme">
     <nav>
       <h1>MICHELLE SANDFORD</h1>
       <ul class="navigation">
@@ -38,6 +39,9 @@
         <li><a href="#skills" class="nav-link">Skills</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
+        <li class="list">Add visual styles</li>
+        <li class="list">Add light and dark themes</li>
+        <li>Enable switching the theme</li>
       </ul>
       <button class="burger-menu" id="burger-menu">
         <ion-icon class="bars" name="menu-outline"></ion-icon>
@@ -45,12 +49,12 @@
       </button>
     </nav>
     
-    <p> 0024 </p>
+    <p> </p>
 
     <!-- Hero Section -->
     <section class="hero" id="about">
       <img
-        src="assets/images/wfh_1.svg"
+        src="assets/images/michelle1.jpg"
         alt="jane-doe"
         loading="lazy"
         class="hero-img"
@@ -291,7 +295,7 @@
 
     <!-- Website scripts -->
     <script src="assets/js/app.js"></script>
-
+    <noscript>You need to enable JavaScript to view the full site.</noscript>
     <!-- Ion icons scripts -->
     <script
       type="module"
@@ -301,5 +305,6 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+
   </body>
 </html>
